Fixed dark mode on animated logo

--- a/src/components/AnimatedLogo.css
+++ b/src/components/AnimatedLogo.css
@@ -9,3 +9,8 @@
   padding: 1em 0;
   width: 100%;
 }
+
+
+.animatedLogoContainer.dark{
+  filter: invert(1);
+}
